%% Solar Lead Management System - ER Diagram (Mermaid)
%% Source of truth: apps/api/prisma/schema.prisma

erDiagram
  users ||--o{ user_district_assignments : has
  districts ||--o{ user_district_assignments : maps

  users ||--o{ user_device_tokens : owns

  districts ||--o{ leads : has
  lead_statuses ||--o{ leads : current_status
  users ||--o{ leads : assigned_executive
  users ||--o{ leads : assigned_manager

  leads ||--o{ lead_status_history : history
  lead_statuses ||--o{ lead_status_history : from_status
  lead_statuses ||--o{ lead_status_history : to_status
  users ||--o{ lead_status_history : changed_by

  lead_statuses ||--o{ lead_status_transitions : from
  lead_statuses ||--o{ lead_status_transitions : to

  notification_templates ||--o{ lead_statuses : default_template

  leads ||--o| customer_details : profile
  districts ||--o{ customer_details : district_ref

  leads ||--o{ documents : has
  users ||--o{ documents : uploaded_by
  users ||--o{ documents : reviewed_by

  leads ||--o{ payments : has
  users ||--o{ payments : collected_by
  users ||--o{ payments : verified_by

  leads ||--o{ notification_logs : has
  notification_templates ||--o{ notification_logs : template_used

  leads ||--o| loan_details : loan

  users ||--o{ audit_logs : actor

  users {
    uuid id PK
    string email UK
    string password_hash
    string full_name
    string role
    string status
    datetime created_at
    datetime updated_at
  }

  districts {
    uuid id PK
    string name
    string state
    boolean is_active
  }

  user_district_assignments {
    uuid id PK
    uuid user_id FK
    uuid district_id FK
    datetime assigned_at
  }

  user_device_tokens {
    uuid id PK
    uuid user_id FK
    string token UK
    string platform
    datetime created_at
  }

  lead_statuses {
    uuid id PK
    string name UK
    int order_index
    boolean is_terminal
    int sla_duration_hours
    boolean notify_customer
    uuid notification_template_id FK
  }

  lead_status_transitions {
    uuid id PK
    uuid from_status_id FK
    uuid to_status_id FK
  }

  leads {
    uuid id PK
    uuid external_id UK
    string name
    string phone
    string email
    uuid district_id FK
    uuid current_status_id FK
    uuid assigned_executive_id FK
    uuid assigned_manager_id FK
    boolean is_overdue
    datetime created_at
    datetime updated_at
  }

  lead_status_history {
    uuid id PK
    uuid lead_id FK
    uuid from_status_id FK
    uuid to_status_id FK
    uuid changed_by_user_id FK
    string notes
    datetime created_at
  }

  customer_details {
    uuid id PK
    uuid lead_id FK
    uuid district_id FK
    string full_name
    string aadhaar_encrypted
    string pan_encrypted
    string bank_account_encrypted
    boolean loan_required
  }

  documents {
    uuid id PK
    uuid lead_id FK
    string category
    string s3_key
    int version
    boolean is_latest
    string review_status
    uuid uploaded_by_user_id FK
    uuid reviewed_by_user_id FK
    datetime created_at
  }

  payments {
    uuid id PK
    uuid lead_id FK
    decimal amount
    string method
    string utr_number
    string status
    uuid collected_by_user_id FK
    uuid verified_by_user_id FK
    datetime created_at
  }

  notification_templates {
    uuid id PK
    string name UK
    string channel
    string body_template
    boolean is_active
  }

  notification_logs {
    uuid id PK
    uuid lead_id FK
    uuid template_id FK
    string channel
    string delivery_status
    int attempts
    datetime created_at
  }

  loan_details {
    uuid id PK
    uuid lead_id FK
    string lender_name
    string application_status
    datetime updated_at
  }

  audit_logs {
    uuid id PK
    uuid actor_user_id FK
    string action
    string entity_type
    string entity_id
    datetime created_at
  }
